# Server-in-c

./: IMPROVEMENTS.md  Makefile  Makefile.temp  README.md  ROADMAP.md  config.c  config.h  meson.build  meson_options.txt  server.c  server.h  start  start.sh  temp_mock_read_buffer.c  test_cache.sh  webserver.c  webserver.h
contrib/: post-install.sh  salop-server.service
docs/: 1-compilation.md  2-configuration.md  3-features.md  4-daemonization.md  5-project-structure.md  changelog.md  compilation.md  configuration.md  daemonization.md  features.md  index.md  install.md  meson.build  project-structure.md  roadmap.md
http/: context.h  create-socket.c  create-socket.h  http_handler.c  http_handler.h  request.c  request.h  verifyMimeType.c  verifyMimeType.h
http/get/: getResponse.c  getResponse.h
methods/get/: response.c  response.h
mime-type/: verify.c
socket/: create.c
src/: meson.build
src/core/: server.c
src/http/: http_handler.c  http_handler.h
src/include/: cache.h  create.h  http_handler.h  logger.h
src/socket/: create.c
src/utils/: cache.c  logger.h  path.c  path.h  regex.c  regex.h  tls.c  tls.h  verify.c
tests/: integration_test.py  meson.build  simple_cache_test.c  simple_http_handler_test.c  simple_path_test.c  simple_utils_test.c  unity_config.h
tests/googletest/googletest/googletest/src/: gtest-printers.cc
tests/http/: test_http_handler.c  test_http_handler_includes.h
tests/mocks/: mock_http_response.c  mock_http_response.h  mock_syscalls.c  mock_syscalls.h  mock_verify.c  mock_verify.h
tests/unity/: unity.c
tests/utils/: test_mimetype.c  test_path.c  test_regex.c
utils/: logger.c  logger.h  regex.c  regex.h  verify.c  verify.h
web/: 404.html  config.xml  data.json  documentation.md  index.html  mime-test.html  readme.txt
web/assets/: config.xml  not-found.css
web/assets/js/: index.js
web/pages/: index.html  notFound.html
web/pages/subpasta/: index.html
