option('enable_tls', type : 'boolean', value : false,
       description : 'Habilitar suporte HTTPS/TLS com OpenSSL')

option('enable_tests', type : 'boolean', value : true,
       description : 'Compilar e executar testes automatizados')

option('enable_docs', type : 'boolean', value : false,
       description : 'Instalar documentação')

option('cache_size', type : 'integer', value : 100, min : 10, max : 1000,
       description : 'Número máximo de entradas no cache')

option('cache_ttl', type : 'integer', value : 300, min : 60, max : 3600,
       description : 'TTL do cache em segundos')

option('buffer_size', type : 'integer', value : 131072, min : 4096, max : 1048576,
       description : 'Tamanho do buffer em bytes')

option('web_root', type : 'string', value : '/var/www/salop',
       description : 'Diretório padrão dos arquivos web para instalação')